--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 
 # Test binary, built with `go test -c`
 *.test
+go.mod
+go.sum
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
